css/base.css
/* ==========================================================================
   Base style definitions
   ========================================================================== */
/* Defaults
-------------------------------------------------- */
/* For devices that do not support html meta viewport (e.g. IE 10 snap mode) */
@-ms-viewport { width: device-width; }
@viewport { width: device-width; }
html {
    box-sizing: border-box;
    overflow-y: scroll;
    min-height: 100%;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 62.5%;
    }
*, *:before, *:after { box-sizing: inherit; }
body {
	height: 100%;
    margin: 0 auto;
	background-color: #272526;
    font-size: 1.6rem;
	font-weight: normal;
	color: #fff;
    }
img, embed, object, video { max-width: 100%; vertical-align: middle; }
p, ul, ol, dl { margin-top: 0; }
ul {
	margin-left: .25em;
	padding-left: 0;
	list-style: none;
	}
ol { padding-left: 1.5em; }
li {
	margin-left: 0;
	padding-left: 0;
	}
p, li {
	margin-bottom: 1.25ex;
	line-height: 160%;
	}

.p {
	margin-top: 0;
	margin-bottom: 1.25ex;
	line-height: 160%;
	}
a, .a {
	color: #FADB8F;
	text-decoration: none;
	cursor: pointer;
	}
.a {
	display: inline;
	margin: 0;
	padding: 0;
	border: none;
	background-color: transparent;
}
a:hover,
.a:hover {
	text-decoration: underline;
	}
:focus {
	outline: #FADB8F solid 1px;
	box-shadow: 0px 0px 2px 2px #FADB8F;
	}
a.current {
	color: #4f0100;
	cursor: text;
	}
a.current:hover {
	text-decoration: none;
	}
.not-active {
    pointer-events: none;
    cursor: default;
    }
button {
	cursor: pointer;
	}
fieldset {
	position: relative;
	margin: 0;
	padding: 0;
	border: 0;
}
hr {
	margin: 20px 0 15px;
	}
table {
	width: 100%;
    table-layout: fixed;
	}
td, th {
	padding: 2ex 1em 2ex 0;
	vertical-align: top;
	text-align: left;
	}
tbody tr {
	border-bottom: 1px solid #b5b5a8;
	}
tbody tr:first-child th,
tbody tr:first-child td {
	padding-top: 0;
	}
td:last-child {
	padding-right: 0;
	}
th {
	color: #4f0100;
	}
td ul,
td li:last-child {
	margin-bottom: 0;
	}
/* Headings
-------------------------------------------------- */
h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
	display: block;
	margin: 1.3ex 0 1ex;
	font-family: 'Barlow Condensed', Impact, sans-serif;
    font-weight: normal;
	}
h1, .h1 {
	font-size: 4rem;
	}
h2, .h2 {
	font-size: 2.3rem;
	}
h3, .h3 {
	font-size: 1.6rem;
	}
h4, .h4 {
	font-size: 1.4rem;
	}
h5, .h5 {
	}
h6, .h6 {
	}
/* Navigation
---------------------------------------- */
nav {
	min-height: 6rem;
	height: 20vh;
	width: 80%;
	margin: 0 auto;
	padding-top: 1em;
	font-size:2.1rem;
    font-family: 'Niconne', cursive;
    font-weight: normal;
}
nav a {
	margin-right: 1.5em;
	margin-left: -.3em;
	padding: 0 .2em;
	white-space: nowrap;
}
.open-menu {
    display: none;
    position: absolute;
    left: .75rem;
    top: 1.5rem;
    width: 2.8rem;
    height: .3rem;
    margin: 0;
    padding: 0;
    border: none;
    border-radius: .2rem;
    background-color: #fff;
}
.open-menu:before,
.open-menu:after {
	content: "";
	position: absolute;
	left: 0;
	top: -.6rem;
	width: 2.8rem;
	height: .3rem;
	border-radius: .2rem;
	background-color: #fff;
}
.open-menu:after {
    top: .6rem;
}
.close-menu {
    display: none;
    position: absolute;
    right: .6rem;
    top: 1.8rem;
    width: 2.5rem;
    height: 2.5rem;
    border: none;
    background-color: transparent;
}
.close-menu:before,
.close-menu:after {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    width: 2.8rem;
    height: .3rem;
    border-radius: .2rem;
    background-color: #fff;
    transform: rotate(45deg)
}
.close-menu:after {
    transform: rotate(-45deg);
}
/* Lists
---------------------------------------- */
.bullet {
	padding-left: 1.4em;
	list-style-type: disc;
	}
.singletons li {
	margin-bottom: 0;
}
/* Forms
---------------------------------------- */
legend {
	overflow: hidden;
	}
.legend {
	display: block;
	margin-top: 1ex;
	font-size: 1.6rem;
	font-weight: bold;
	}
fieldset fieldset legend {
	font-size: 1.4rem;
	}
label {
    display: inline-block;
    width: 7em;
    margin-right: 2em;
}
label.auto-length {
	width: auto;
}
.inline-label {
	width: auto;
	}
.block-label {
	display: block;
	width: auto;
	margin-bottom: .5ex;
}
input[type=text],
input[type=password],
input[type=search],
input[type=email],
input[type=number],
input[type=date],
input[type=tel],
input[type=url],
select,
textarea {
    padding: 1ex .5em;
    width: 20em;
    font-size: 1.3rem;
    line-height: 1;
    background: #fff;
    border: 1px solid #d5d5d5;
    border-radius: 2px;
    box-shadow: inset 0 5px 5px -5px rgba(0,0,0,0.2);
    box-sizing: border-box;
    }
input[type=text]:focus,
input[type=password]:focus,
input[type=search]:focus,
input[type=email]:focus,
input[type=number]:focus,
input[type=date]:focus,
input[type=tel]:focus,
input[type=url]:focus,
select:focus,
textarea:focus {
	box-shadow: inset 0px 0px 2px 2px #3279bf;
	}
input[type="radio"],
input[type="checkbox"] {
    display: inline-block;
    margin-right: .3em;
    }
input[disabled] {
	background-color: #eee;
}
.required-field::after {
    content: "*";
    display: inline-block;
    margin-left: .1em;
    font-weight: bold;
    color: red;
    }
.form-row {
	margin: 1.5ex 0;
	}
/* Buttons
---------------------------------------- */
.btn {
	position: relative;
	display: inline-block;
	height: 3em;
	padding: .75em 0.75em 0 .8em;
	border: .2rem solid #fff;
	background-color: #272526;
	font-size: 1.4rem;
	font-weight: bold;
	color: #fff;
	line-height: 1;
	text-align: center;
	text-decoration: none;
	white-space: nowrap;
	}
.btn:hover,
.btn:focus,
.btn:active {
    background-color: #fff;
    color: #272526;
	text-decoration: none;
    outline: #fff solid 1px;
    box-shadow: none;
	}
/* General Helpers
-------------------------------------------------- */
.center-text {
	text-align: center;
	}
.float-left {
	float: left;
	}
.float-right {
	float: right;
	}
.clear {
	clear: both;
	}
.bold {
	font-weight: bold;
	}
.normal {
	font-weight: normal;
	}
.block {
	display: block;
	}
.inline {
	display: inline;
	}
/* Showing and Hiding
---------------------------------------- */
.is-hidden { /* Hide from both screenreaders and browsers */
    display: none !important;
    visibility: hidden;
    }
.is-visible { /* Show element to both screenreaders and browsers */
	display: block !important;
	visibility: visible;
	}
.screen-reader-text { /* Hide only visually, but have it available for screenreaders */
	position: absolute !important;
	display: block;
	visibility: visible;
	overflow: hidden;
	width: 1px;
	height: 1px;
	margin: -1px;
	border: 0;
	padding: 0;
	clip: rect(0px, 0px, 0px, 0px); /* deprecated */
	clip-path: polygon(0px 0px, 0px 0px, 0px 0px, 0px 0px);
    white-space: nowrap; /* wrap uses line feeds but LFs are not recognized as spaces by screen readers */
    }
/* Skip link
---------------------------------------- */
.skip-link {
	display: block;
	width: 80%;
	height: 1.2em;
	line-height: 1;
	margin: 0 auto;
	margin-top: -1.2em;
	font-size:2.1rem;
	font-family: 'Niconne', cursive;
	font-weight: normal;
	}
.skip-link:focus {
	height: auto;
	margin: auto;
	margin-top: .5em;
	}
/* Page component structure
---------------------------------------- */
.page-wrapper {
	width: 80%;
	margin: 0 auto 10ex;
	}
/* Pages
---------------------------------------- */
.home {}
.home .page-wrapper {
	position: relative;
	display: flex;
	flex-wrap: wrap;
	align-content: center;
	min-height: 30rem;
	height: 60vh;
	border: 5px solid white;
	text-align: center;
}
.home .page-wrapper:before {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    overflow: hidden;
    min-width: 14rem;
    width: 23%;
    height: 100%;
    margin-top: 0%;
    margin-left: -4%;
    background: url("../assets/grapes.png") left -8px no-repeat;
    background-size: contain;
    pointer-events: none;
}
.home .page-wrapper:after {
	content: "";
	position: absolute;
	right: 0;
	bottom: 0;
	min-width: 22rem;
	width: 37%;
	height: 100%;
	margin-bottom: -3.8%;
	margin-right: -9.5%;
	background: url("../assets/tulip-and-mum.png") right bottom no-repeat;
	background-size: contain;
	pointer-events: none;
}
.home .page-wrapper > * {
	width: 100%;
}
.welcome {
    font-family: 'Niconne', cursive;
    line-height: 1;
}
.name {
    margin-bottom: 1.75ex;
    padding: 0 .75em;
    font-size: 4.5rem;
    line-height: 1;
    text-transform: uppercase;
}


/* MOBILE */
@media screen
  and (min-device-width: 320px)
  and (max-device-width: 767px) {
  	.home .page-wrapper {
  		height: 80vh;
  		width: auto;
  		margin: 10vh;
  		min-height: 0;
  	}
	.home .page-wrapper:after {
		margin-right: -13%;
	}
	.home .page-wrapper:before {
		margin-left: -6%;
	}
    button:focus,
    a:focus,
    a:active {
        outline: none;
        box-shadow: none;
        text-decoration: none;
    }
	.open-menu {
    	display: block;
	}
	nav {
		display: none;
		position: absolute;
		height: 100vh;
		min-height: 0;
		width: auto;
		padding: 0;
		background-color: #240f0f;
		z-index: 1;
	}
	nav.active {
		display: block;
	}
    .active .close-menu {
        display: block;
    }
	nav a {
		display: block;
		margin: 0;
		padding: 1.5ex 0 1.25ex 1.25em;
		margin-right: 1.5em;
	}
	nav a:first-child {
		margin-top: 1.5ex;
	}
}
/* MOBILE PORTRAIT */
@media screen
  and (min-device-width: 320px)
  and (max-device-width: 767px)
  and (orientation: portrait) {
  	.home .page-wrapper {
  		width: auto;
  		height: 88vh;
  		margin: 6vh;
  	}
	.home .page-wrapper:before {
		margin-left: -13%;
	}
	.home .page-wrapper:after {
		margin-right: -29%;
		margin-bottom: -8%;
	}
}
/* IPHONE 5 */
@media screen
  and (min-device-width: 320px)
  and (max-device-width: 374px) {
  	.home .page-wrapper:before {
    	min-width: 11rem;
   }
  	.home .page-wrapper:after {
    	min-width: 17rem;
   }
}
/* IPHONE 5 PORTRAIT */
@media screen
  and (min-device-height: 320px)
  and (max-device-height: 374px)
  and (orientation: landscape) {
  	.home .page-wrapper:before {
    	min-width: 11rem;
   }
  	.home .page-wrapper:after {
    	min-width: 17rem;
    	margin-right: -16%;
   }
}
/* TABLET */
@media screen
  and (min-device-width: 768px)
  and (max-device-width: 1024px) {


}


/* TABLET PORTRAIT*/
@media screen
  and (min-device-width: 768px)
  and (max-device-width: 1024px)
  and (orientation: portrait) {


}

